result div color added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
              cursor:pointer;
         }
 
+
+        #result1{
+          background-color: #ffffff68;
+        }
+
+
         li:hover{
-          background-color: rgb(204, 25, 25);
+          background-color: rgb(221, 1, 1);
           color: white;
         }
     </style>
